src/main/java/com/example/unknown/global/error/exception/CustomException.java
package com.example.unknown.global.error.exception;

import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
public class CustomException extends RuntimeException {
    ErrorCode errorCode;
}
